[package]
name = "blog_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.9.0" }
xdb = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
# 用于初始化日志打印
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
# 异步运行时
serde = { version = '1.0.219', features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_yaml = { version = "0.9.33" }
diesel = { version = "2.2.8", features = ["postgres","chrono"] }
dotenvy = { version = "0.15.7" }
chrono ={version = "0.4.40",features = ["serde"] }